objects/Employement_History__c.object
<CustomObject>
    <label>Employement History</label>
    <nameField>
        <displayFormat>EHistory-{0000}</displayFormat>
        <label>Employement History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employement Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <referenceTo>K_Employee__c</referenceTo>
        <relationshipLabel>Employement Histories</relationshipLabel>
        <relationshipName>Employement_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Profile_Position__c</fullName>
        <label>Profile/Position</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_Experiene__c</fullName>
        <formula>TEXT(FLOOR((End_Date__c-Start_Date__c)/365))+&apos; Year &apos; + TEXT(FLOOR(MOD( (End_Date__c-Start_Date__c),365)/30)  )+&apos; Month&apos;</formula>
        <label>Working Experiene</label>
        <type>Text</type>
    </fields>
</CustomObject>